[package]
name = "actix_test"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0.1"
actix-rt = "1.1"
actix-service = "1.0.5"
actix-web = "2.0"
failure = "0.1.7"
firestore_grpc_cloudrun = "0.1.1"
futures = "0.3.4"
hex = "0.4.2"
ipnet = "2.3"
prost-types = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_test = "1.0"
sha-1 = "0.8.2"
tonic = "0.1.1"